[package]
name = "medit"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["tlhelp32","handleapi","memoryapi"]}
kernel32-sys = "0.2.2"
wio = "0.2.2"
dynerr = {git="https://github.com/0rphon/dynerr"}
sysinfo = "0.15.1"